# bevy_tailwind

./: AGENTS.md  Cargo.toml  bevy
docs/: bevy-upgrade-guide.md  tailwind-class-analysis.md
examples/: grid.rs
macros/src/: border.rs  lib.rs  picking.rs  shadow.rs  text.rs  z_index.rs
macros/src/node/: mod.rs  overflow_clip_margin.rs  scrollbar_width.rs
macros/tests/pass/: Cargo.toml
macros/tests/pass/src/: lib.rs
src/: lib.rs
