[package]
name = "bevy_tailwind"
version = "0.4.0"
edition = "2024"
authors = ["notmd"]
repository = "https://github.com/notmd/bevy_tailwind"
description = "TailwindCSS for Bevy"
license = "MIT"
keywords = ["bevy", "tailwind", "css", "styled"]

[workspace]
members = ["macros", "macros/tests/runner", "macros/tests/pass"]

[dependencies]
bevy_tailwind_macro = { path = "macros" }
bevy = { path = "../bevy", default-features = false, features = [
    "bevy_ui",
    "bevy_text",
] }

[dev-dependencies]
bevy = { path = "../bevy", default-features = false, features = [
    "bevy_ui",
    "bevy_text",
    "bevy_window",
    "bevy_winit",
    "default_font",
    "x11",
] }
